eip.tf
 resource "aws_eip" "nat_user12-eip_1a" {
  vpc = true
}

resource "aws_eip" "nat_user12-eip_1c" {
  vpc = true
}
